Fixed small spacing error in Footer, tweaked review layout, display:grid on sec-consulting, adjusted cta widget and picture.

--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ div p {
     padding-bottom: 2em;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 46em) {
     .cta {
-        width: 350px;
+        /* width: 350px; */
+        width: 35%;
         position: absolute;
         top: 20vw;
         left: 5vw;
         padding-block: 1.5em;
-        border: 1px solid red;
     }
 }
 
@@ -118,8 +118,30 @@ div p {
 }
 
 .sec-consulting li {
-    text-align: left;
     font-weight: bold;
+    padding-bottom: 0.25em;
+}
+
+@media screen and (min-width: 50em) {
+    .sec-consulting {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .sec-consulting ul {
+        grid-row: 1 / 3;
+    }
+
+    .sec-consulting li {
+        padding-bottom: 0.75em;
+    }
+
+    .sec-consulting button {
+        grid-column: 1 / -1;
+        grid-row: 3;
+        width: 15ch;
+        margin: 0 auto;
+    }
 }
 
 .sec-dentrix {
@@ -143,10 +165,15 @@ div p {
 
 .sec-reviews h2 {
     font-size: 2.5em;
+    margin-block: 1em 1.5em;
+}
+
+.sec-reviews h3 {
+    font-style: italic;
 }
 
 .sec-reviews article {
-    padding: 2em 0;
+    padding: 0 2em 1em;
 }
 
 .sizzle-bar {
@@ -161,7 +188,7 @@ div p {
 /* #region */
 
 footer div {
-    padding: 1em;
+    padding: 1em 0;
     background-color: var(--bkg-maroon);
     color: var(--text-light);
     margin-inline: auto;
@@ -184,21 +211,21 @@ footer h2 {
 
 @media screen and (min-width: 950px) {
     footer {
-      display: flex;
-      background-color: var(--bkg-maroon);
-      flex-flow: row-reverse wrap;
-      justify-content: center;
-      align-items: center;
+        display: flex;
+        background-color: var(--bkg-maroon);
+        flex-flow: row-reverse wrap;
+        justify-content: center;
+        align-items: center;
     }
 
     /* Turn on the logo. */
     footer .logo {
-      display: block;
+        display: block;
     }
 
     footer .copyright {
-      width: 100%;
-      text-align: center;
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -255,6 +282,14 @@ h4 {
 
 .cta p {
     font-size: 1.2rem;
+}
+
+.sec-reviews article {
+    font-size: 125%;
+}
+
+.sec-reviews p {
+    line-height: 1.6;
 }
 
 /* NAVIGATION */
